--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: Deploy to AWS
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ vue-3-book-store ]
+    branches: [ main ]
   pull_request:
-    branches: [ vue-3-book-store ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
